fixed not showing number on ordered list blogpost WCAG

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -677,6 +677,6 @@ pre[class*='language-'] {
   }
 
   .blog__numbered__list {
-    @include clearfix;
+    clear: both;
   }
 }
